added LINEAR sensor
This sensor is not available on the Emulator.
Settings have not yet been implemented, currently it's just set in
MainActivity.SENSOR_DEFAULT

--- a/VS_minker_AntiTheftAlarm2/app/src/main/res/layout/activity_main.xml
+++ b/VS_minker_AntiTheftAlarm2/app/src/main/res/layout/activity_main.xml
@@ -8,8 +8,8 @@
         tools:context="ch.ethz.inf.vs.minker.vs_minker_antitheftalarm.MainActivity">
 
     <CheckBox
-            android:text="@string/on"
+            android:text="@string/off"
             android:layout_width="match_parent"
             android:layout_height="match_parent" android:id="@+id/checkBox" android:layout_weight="1"
-    />
+            android:checked="false"/>
 </LinearLayout>
