--- a/VS_minker_AntiTheftAlarm2/app/src/main/res/layout/activity_main.xml
+++ b/VS_minker_AntiTheftAlarm2/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context="ch.ethz.inf.vs.minker.vs_minker_antitheftalarm.MainActivity">
+        tools:context="ch.ethz.inf.vs.a1.minker.antitheft.MainActivity">
 
     <CheckBox
             android:text="@string/off"
