--- a/VS_minker_AntiTheftAlarm2/app/src/main/res/layout/activity_settings.xml
+++ b/VS_minker_AntiTheftAlarm2/app/src/main/res/layout/activity_settings.xml
@@ -6,7 +6,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        tools:context="ch.ethz.inf.vs.minker.vs_minker_antitheftalarm.MainActivity">
+        tools:context="ch.ethz.inf.vs.a1.minker.antitheft.MainActivity">
 
     <LinearLayout
             android:orientation="horizontal"
