--- a/VS_minker_BleSensirion/app/src/main/res/layout/activity_list.xml
+++ b/VS_minker_BleSensirion/app/src/main/res/layout/activity_list.xml
@@ -5,6 +5,7 @@
     android:layout_height="match_parent"
     android:layout_weight="1"
     android:lineSpacingExtra="8sp"
+    android:paddingBottom="10dp"
+    android:paddingTop="10dp"
     android:text="TextView"
-    android:textSize="18sp"
-    />
+    android:textSize="19sp" />
