--- a/VS_minker_BleSensirion/app/src/main/res/layout/activity_main.xml
+++ b/VS_minker_BleSensirion/app/src/main/res/layout/activity_main.xml
@@ -1,52 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="ch.ethz.inf.vs.a1.minker.ble.MainActivity"
-    tools:layout_editor_absoluteY="81dp"
-    tools:layout_editor_absoluteX="0dp">
-
-    <LinearLayout
-        android:layout_width="368dp"
-        android:layout_height="495dp"
-        android:orientation="vertical"
-        tools:layout_editor_absoluteX="8dp"
-        tools:layout_editor_absoluteY="8dp">
+    android:orientation="vertical"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
         <Button
             android:id="@+id/scan_button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
             android:text="Scan"
-            android:textSize="18sp"
-            tools:layout_editor_absoluteX="0dp"
-            tools:layout_editor_absoluteY="0dp" />
+            android:textSize="18sp" />
         <ProgressBar
             android:id="@+id/scanbar"
             style="?android:attr/progressBarStyleHorizontal"
-            android:layout_width="368dp"
+            android:layout_width="match_parent"
             android:layout_height="10dp"
-            tools:layout_editor_absoluteX="8dp"
-            tools:layout_editor_absoluteY="-12dp"
             android:indeterminate="false"/>
 
         <ListView
             android:id="@+id/device_list"
             android:layout_width="wrap_content"
-            android:layout_height="301dp"
-            android:layout_marginLeft="8dp"
+            android:layout_height="0dp"
             android:layout_marginStart="8dp"
-            android:layout_weight="69.57"
-            app:layout_constraintHorizontal_bias="0.555"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-    </LinearLayout>
-
-
-
-</android.support.constraint.ConstraintLayout>
+            android:layout_weight="69.57"/>
+</LinearLayout>
