--- a/Ex2/Webservices/app/src/main/res/layout/activity_task2.xml
+++ b/Ex2/Webservices/app/src/main/res/layout/activity_task2.xml
@@ -5,9 +5,14 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:orientation="vertical"
         tools:context="ch.ethz.inf.vs.a2.minker.Task2Activity">
 
-    <SeekBar
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" android:id="@+id/seekBar" android:layout_weight="1"/>
+    <TextView
+            android:text="@string/t2_temperature_display_default"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:id="@+id/t2_temperature_display"
+            android:gravity="center"
+            android:layout_weight="1"/>
 </LinearLayout>
