--- a/Ex2/Webservices/app/src/main/res/layout/activity_task2.xml
+++ b/Ex2/Webservices/app/src/main/res/layout/activity_task2.xml
@@ -15,16 +15,16 @@
             android:id="@+id/t2_temperature_display"
             android:gravity="center"
             android:layout_weight="1"/>
-    <LinearLayout
+    <LinearLayout style="?android:attr/buttonBarStyle"
             android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="0dp" android:layout_weight="1"
             android:gravity="bottom">
-        <Button
+        <Button style="?android:attr/buttonBarButtonStyle"
                 android:text="@string/manual"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" android:id="@+id/t2_btnManual" android:layout_weight="1"/>
-        <Button
+        <Button style="?android:attr/buttonBarButtonStyle"
                 android:text="@string/library"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" android:id="@+id/t2_btnLibrary" android:layout_weight="1"/>
