--- a/Ex2/Webservices/app/src/main/res/layout/activity_temperature_sensor.xml
+++ b/Ex2/Webservices/app/src/main/res/layout/activity_temperature_sensor.xml
@@ -10,7 +10,8 @@
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:freezesText="true"/>
 
     <Spinner
         android:id="@+id/spinner"
