--- a/Ex3/VSminkerChat/app/src/main/res/layout/activity_main.xml
+++ b/Ex3/VSminkerChat/app/src/main/res/layout/activity_main.xml
@@ -14,6 +14,7 @@
                   android:text="username"
                   android:id="@+id/et_username"
                   android:freezesText="true"
+                  android:maxLines="1"
         />
     <LinearLayout
             android:orientation="horizontal"
