--- a/Ex3/VSminkerChat/app/src/main/res/layout/activity_main.xml
+++ b/Ex3/VSminkerChat/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,7 @@
         <EditText android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:gravity="center"
-                  android:text="username"
+                  android:hint="username"
                   android:id="@+id/et_username"
                   android:freezesText="true"
                   android:maxLines="1"
