--- a/Ex3/VSminkerChat/app/src/main/res/layout/activity_chat.xml
+++ b/Ex3/VSminkerChat/app/src/main/res/layout/activity_chat.xml
@@ -1,15 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        tools:context="ch.ethz.inf.vs.a3.vsminkerchat.ChatActivity">
+        tools:context="ch.ethz.inf.vs.a3.vsminkerchat.ChatActivity"
+    android:weightSum="1">
 
-    <TextView
-            android:text="YEY. CHAT."
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:id="@+id/textView2"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" android:id="@+id/textView2"/>
-</LinearLayout>
+            android:layout_height="wrap_content"
+            android:text="Please Request new Messages" />
+
+    </LinearLayout>
+
+
+    <Button
+        android:id="@+id/button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:onClick="onMessageUpdate"
+        android:text="Retrieve chat log"
+        android:textAlignment="center" />
+</RelativeLayout>
