--- a/Ex3/VSminkerChat/app/src/main/res/layout/activity_chat.xml
+++ b/Ex3/VSminkerChat/app/src/main/res/layout/activity_chat.xml
@@ -17,6 +17,7 @@
             android:id="@+id/textView2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:freezesText="true"
             android:text="Please Request new Messages" />
 
     </LinearLayout>
